--- a/BACKEND/requirements.txt
+++ b/BACKEND/requirements.txt
@@ -7,3 +7,8 @@ django-model-utils==4.3.1
 django-restframework==0.0.1
 django-timezone-field==5.0
 djangorestframework==3.14.0
+
+pandas~=2.1.4
+scikit-learn~=1.3.2
+celery~=5.3.6
+requests~=2.31.0
